--- a/things/templates/home.html
+++ b/things/templates/home.html
@@ -6,6 +6,9 @@
   <h1>
     Things
   </h1>
-  <p>Some stuff about things goes here.</p>
+  <form>
+    {% csrf_token %} {{form.as_p}}
+    <button type="submit">Submit</button>
+  </form>
 </body>
 </html>
